--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,20 @@
+---
+version: 2.1
+
 workflows:
-  version: 2
   main:
     jobs:
-      - php72-build
-      - php73-build
-      - build-and-test-codeception:
+      - php72-tests
+      - php73-tests
+      - acceptance-tests:
           context: org-global
+      - rips-test:
+          context: rips-scans
           filters:
             branches:
-              ignore: languages
-
-version: 2
+              ignore: /.*/
+            tags:
+              only: /^v\p{Digit}+\.\p{Digit}+.*/
 
 job-references:
   mysql_image: &mysql_image
@@ -62,19 +66,19 @@ job-references:
 
 
 jobs:
-  php72-build:
+  php72-tests:
     <<: *php_job
     docker:
       - image: greenpeaceinternational/p4-unit-tests:php7.2-develop
       - image: *mysql_image
 
-  php73-build:
+  php73-tests:
     <<: *php_job
     docker:
       - image: greenpeaceinternational/p4-unit-tests:php7.3-develop
       - image: *mysql_image
 
-  build-and-test-codeception:
+  acceptance-tests:
     docker:
       - image: greenpeaceinternational/p4-builder:latest
     working_directory: /home/circleci/
@@ -108,7 +112,6 @@ jobs:
           name: Test - Clone planet4-docker-compose
           command: |
             git clone https://github.com/greenpeace/planet4-docker-compose
-
       - run:
           name: Test - Run tests
           command: |
@@ -116,7 +119,6 @@ jobs:
             export APP_IMAGE=gcr.io/planet-4-151612/planet4-base-app:${BUILD_TAG}
             export OPENRESTY_IMAGE=gcr.io/planet-4-151612/planet4-base-openresty:${BUILD_TAG}
             make -C planet4-docker-compose ci test
-
       - run:
           name: Test - Extract test artifacts
           when: always
@@ -125,14 +127,20 @@ jobs:
             export APP_IMAGE=gcr.io/planet-4-151612/planet4-base-app:${BUILD_TAG}
             export OPENRESTY_IMAGE=gcr.io/planet-4-151612/planet4-base-openresty:${BUILD_TAG}
             make -C planet4-docker-compose ci-extract-artifacts
-
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
             - var
-
       - store_test_results:
           path: planet4-docker-compose/artifacts
-
       - store_artifacts:
           path: planet4-docker-compose/artifacts
+
+  rips-test:
+    docker:
+      - image: rips/rips-cli:3
+    environment:
+      RIPS_APPLICATION_ID: 5
+    steps:
+      - checkout
+      - run: rips-cli -vvv rips:scan:start -a $RIPS_APPLICATION_ID -p ~/project/ -t 1
