--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylelint": "^13.0.0",
     "gulp-svg-sprite": "^1.5.0",
-    "kss": "^3.0.0-beta.25",
-    "node-sass": "^4.13.1",
+    "kss": "^3.0.1",
+    "node-sass": "^4.14.1",
     "stylelint": "^10.0.1"
   }
 }
