--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "jest-environment-node": "^26.0.1",
-    "photoswipe": "^4.1.3"
+    "photoswipe": "^4.1.3",
+    "font-picker-react": "^3.5.2",
+    "i": "^0.3.6",
+    "npm": "^6.14.6",
+    "postcss-css-variables-extract": "^0.1.2"
   }
 }
