--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -38,6 +38,12 @@
         <exclude name="Generic.Arrays.DisallowShortArraySyntax"/>
     </rule>
 
+	<!-- All files in src are classes so already have a required comment before the declaration. The rule also forced
+	to include an @package annotation, which is redundant if there is a namespace. -->
+	<rule ref="Squiz.Commenting.FileComment">
+		<exclude-pattern>src/*</exclude-pattern>
+	</rule>
+
     <!-- Check all PHP files in directory tree by default. -->
     <arg name="extensions" value="php"/>
     <file>.</file>
