--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
             else
               MASTER_THEME_BRANCH="${CIRCLE_BRANCH}"
             fi
-            MASTER_THEME_BRANCH=dev-${MASTER_THEME_BRANCH} \
+            MASTER_THEME_BRANCH=dev-${MASTER_THEME_BRANCH}#${CIRCLE_SHA1} \
             MERGE_SOURCE=git@github.com:greenpeace/planet4-base-fork.git \
             MERGE_REF=develop \
             FORK_USER=$CIRCLE_PR_USERNAME \
