--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - checkout:
-          path: /home/circleci/theme-src
+          path: /home/circleci/checkout/planet4-master-theme
       - run:
           name: Build - Configure
           command: |
@@ -110,15 +110,13 @@ jobs:
           command: |
             echo "Master theme branch is ${CIRCLE_BRANCH}"
             if [ -n "$CIRCLE_PR_NUMBER" ]; then
-              MASTER_THEME_BRANCH="$(./get-fork-pr-branch.sh)"
+              BRANCH="$(./get-fork-pr-branch.sh)"
             else
-              MASTER_THEME_BRANCH="${CIRCLE_BRANCH}"
+              BRANCH="${CIRCLE_BRANCH}"
             fi
-            MASTER_THEME_BRANCH=dev-${MASTER_THEME_BRANCH}#${CIRCLE_SHA1} \
+            MASTER_THEME_BRANCH=dev-${BRANCH}#${CIRCLE_SHA1} \
             MERGE_SOURCE=git@github.com:greenpeace/planet4-base-fork.git \
             MERGE_REF=develop \
-            FORK_USER=$CIRCLE_PR_USERNAME \
-            FORK_REPO=$CIRCLE_PR_REPONAME \
             make ci
       - run:
           name: Test - Clone planet4-docker-compose
