Create branch of fork in checkout

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,6 +112,7 @@ jobs:
             echo "Master theme branch is ${CIRCLE_BRANCH}"
             if [ -n "$CIRCLE_PR_NUMBER" ]; then
               BRANCH="$(./get-fork-pr-branch.sh)"
+              git --git-dir=/home/circleci/checkout/planet4-master-theme/.git checkout -b "${BRANCH}"
             else
               BRANCH="${CIRCLE_BRANCH}"
             fi
