PLANET-4814: Convert EN Form block to WYSIWYG [skip ci]
Block conversion to WYIWYG

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,7 @@ jobs:
       - run:
           name: Lint CSS
           when: always
-          command: stylelint "assets/src/styles/**/*.scss"
+          command: stylelint assets/src/**/*.scss
       - run:
           name: Lint JS
           when: always
@@ -263,7 +263,7 @@ jobs:
       - run:
           name: Book instance
           command: |
-            JIRA_USERNAME=planet4 book-test-instance.py \
+            JIRA_USERNAME=planet4 /home/circleci/book-test-instance.py \
             --pr-url $(cat /tmp/workspace/pr) \
             --results /tmp/workspace/booking.json >/tmp/workspace/test-instance
       - run: activate-gcloud-account.sh
