Group on last clicked element
These are the last changes before the code should be rewritten to use
hooks instead of class components. I decided to make these changes first
as they're not too big but improve the quality of the POC quite a lot.
Rewriting to hooks will take some time so I didn't want to postpone
these.
* If checked show only vars applying to last clicked element, which are
grouped by each parent that is the highest level element the variable is
applying to.
* Highlight that parent element when hovering the group title.
* Fix bug in firefox caused by accessing element.attributes.href.

config stylelint

use new package repo

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "photoswipe": "^4.1.3",
     "font-picker-react": "^3.5.2",
     "i": "^0.3.6",
+    "jest-environment-node": "^26.0.1",
     "npm": "^6.14.6",
-    "postcss-css-variables-extract": "^0.1.2"
+    "postcss-css-variables-extract": "^0.1.2",
+    "tinycolor2": "^1.4.2"
   }
 }
