--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,9 @@
       "vendor/plugins/{$name}/": ["type:wordpress-plugin"]
     }
   },
+  "require": {
+    "greenpeace/github-archive-installer": "^1.2"
+  },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.3",
     "wp-coding-standards/wpcs": "^2.2.0",
