--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gulp-svg-sprite": "^1.5.0",
     "kss": "^3.0.1",
     "node-sass": "^4.14.1",
+    "pa11y-ci": "^2.4.0",
+    "pa11y-ci-reporter-html": "^2.0.3",
     "stylelint": "^10.0.1"
   }
 }
