--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@greenpeace/dashdash": "^1.0.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "*",
+    "@babel/plugin-proposal-optional-chaining": "*",
     "@wordpress/components": "^8.3.2",
     "@wordpress/data": "^4.9.2",
     "@wordpress/e2e-test-utils": "^4.5.0",
@@ -24,6 +26,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "css-loader": "^3.2.0",
+    "file-loader": "^6.2.0",
     "lodash": "^4.17.19",
     "lodash.assign": "^4.2.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -33,12 +36,11 @@
     "remove-files-webpack-plugin": "^1.1.3",
     "sass-loader": "^7.3.1",
     "terser-webpack-plugin": "^1.4.1",
-    "webpack-fix-style-only-entries": "^0.3.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "*",
-    "@babel/plugin-proposal-optional-chaining": "*"
+    "webpack-fix-style-only-entries": "^0.3.1"
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "jest-environment-node": "^26.0.1"
+    "jest-environment-node": "^26.0.1",
+    "photoswipe": "^4.1.3"
   }
 }
