Fix stylelint recursive path
stylelint needs a double-quoted path, otherwise it doesn't make a recursive lookup.

Fixed all pending issues stylelint did't report correctly up until now.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,7 +180,7 @@ jobs:
       - run:
           name: Lint CSS
           when: always
-          command: stylelint assets/src/**/*.scss
+          command: stylelint "assets/src/styles/**/*.scss"
       - run:
           name: Lint JS
           when: always
